# hs-lhapdf-test

./: .gitignore  LICENSE  README.md  default.nix  hs-lhapdf-test.cabal  release.nix  shell.nix
src/: lhapdf-test.hs
src/HEP/Data/: LHAPDF.hsc
